[package]
name = "antivanguard"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.winres]
LegalCopyright = "Copyright © 2024 thrzl"
FileDescription = "kills the vgc service when not in use"

[build-dependencies]
embed-resource = "2.4.2"
winres = "0.1.12"

[dependencies]
is_elevated = "0.1.2"
sysinfo = "0.30.10"
tray-item = "0.10.0"
winapi = { version = "0.3.9", features = ["wincon"] }
windows-service = "0.6.0"
